# tweet2recommend

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: main.py  settings.py  test.py
tests/: test_tweet_get_and_reply.py
