[tool.poetry]
name = "tweet-get-and-reply"
version = "0.1.0"
description = ""
authors = ["Yusuke Suzuki"]

[tool.poetry.dependencies]
python = "^3.9.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
main = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
