[tool.poetry]
name = "tweet-get-and-reply"
version = "0.1.0"
description = ""
authors = ["Yusuke Suzuki"]

[tool.poetry.dependencies]
python = "^3.9.1"
tweepy = "^3.10.0"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

[tool.poetry.scripts]
main = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
